tests/cases/compiler-development/artifact/errors/diagnostic-c-header-target-array-by-value.diagnostic
diagnostic error code=A0001 family=abi message="C header emission for by-value parameter [i64, 2] is currently supported only on 64-bit Unix targets; use ptr [i64, 2] for a stable ABI on target 'x86_64-pc-windows-msvc'" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/ffi/errors/c-header-target-array-by-value.ari" display="tests/cases/ffi/errors/c-header-target-array-by-value.ari" bytes=105
  Label index=0 role=primary source_id=0 source="tests/cases/ffi/errors/c-header-target-array-by-value.ari" line=2 column=8 end_line=2 end_column=18 byte_start=33 byte_end=43 message=""
  Snippet label=0 text="  --> tests/cases/ffi/errors/c-header-target-array-by-value.ari:2:8\n   |\n 2 | pub fn take_array(values: [i64, 2]) -> i64 {\n   |        ^^^^^^^^^^"
  Note index=0 location=none message="C header generation emits Ari's supported C ABI contract and cannot promise target-specific aggregate calling rules for this target"
  Help index=0 location=none message="pass ptr [i64, 2] or emit the header for a supported 64-bit Unix target"
